Correction overflow sur mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,7 @@ body {
 
 @media only screen and (max-width: 950px) {
     body {
+        -webkit-overflow-scrolling: touch;
         overflow: auto !important;
     }
 }
